Added footer content

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="author">By: </div>
 
             <div class="footer">
-                <div class="readStatus"></div>
-                <div class="pages"></div>
+                <div class="readStatus read">Unread</div>
+                <div class="pages">320</div>
             </div>
             
         </div>
