Added 'add book button' which brings up form; When form is displayed, clicking outside the form will dismiss form

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 </head>
 <body>
     <div class="content">
-        
         <div class="header">
             <div class="logo"></div>
             <h1>Library</h1>
-            <div class="hamburger"></div>
         </div>
-
+        <button type="button" id="addBookButton">Add Book</button>
         <main class="bookshelf"></main>
 
     </div>
