Form now validates input (why take me so long), and correctly creates a book

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     </div>
     <div class="formContainer">
-        <form action="collectBookData" method="get" class="bookInfo">
+        <form  class="bookInfo">
             <fieldset>
                 <h2>Create New Book!</h2>
                 <label for="getTitle">Title: </label>
@@ -33,6 +33,7 @@
 
                 <label for="getReadStatus">Read: </label>
                 <input type="checkbox" name="ReadStatus" id="getReadStatus">
+                
                 <button type="submit" name="addBook" id="submitBook">Add Book</button>
             </fieldset>
         </form>
