--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input type="text" name="Author" id="getAuthor" required>
 
                 <label for="getPages">Pages: </label>
-                <input type="number" name="Pages" id="getPages" min="1" required>
+                <input type="number" name="Pages" inputmode="numeric" id="getPages" min="1" required>
 
                 <label for="getReadStatus">Read: </label>
                 <input type="checkbox" name="ReadStatus" id="getReadStatus">
